# PrtOpenSearchMcp

./: .env.example  Dockerfile  README.md  mcp.json.example  pyproject.toml
catalog/: generated.json
scripts/: build_catalog.py
src/prt_opensearch_mcp/: __main__.py  catalog.py  config.py  connections.py  query_guard.py  server.py
tests/: test_query_guard.py
