[project]
name = "prt-opensearch-mcp"
version = "0.1.0"
description = "MCP server for ProRata OpenSearch (chunk index / RAG debug)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "opensearch-py>=2.7.0",
    "httpx>=0.27.0",
    "prt-mcp-common>=0.1.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
prt-opensearch-mcp = "prt_opensearch_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prt_opensearch_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
